objects/CLV_ChecklistVisita_ARG__c.object
<CustomObject>
    <fields>
        <fullName>ActionScheduleAchived_AR__c</fullName>
        <inlineHelpText>Calendário propuesto para la acción esta siendo / fue cumplido?</inlineHelpText>
        <label>Action Schedule Achived?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActionsEventsComments_AR__c</fullName>
        <label>Actions / Events Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ActionsEventsExecutted_AR__c</fullName>
        <label>Actions / Events Executted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgreementwithStrategy_AR__c</fullName>
        <inlineHelpText>Cliente concordó con la estrategia?</inlineHelpText>
        <label>Agreement with Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collectionperformed_AR__c</fullName>
        <label>Collection performed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommentsSale_AR__c</fullName>
        <label>Comments Sale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commentscollections_AR__c</fullName>
        <label>Comments collections</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompetitorProduct01_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Product 01</label>
        <referenceTo>Produto_Concorrente__c</referenceTo>
        <relationshipLabel>Checklist de Visitas ARG</relationshipLabel>
        <relationshipName>Checklist_de_Visitas_ARG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompetitorProduct02_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Product 02</label>
        <referenceTo>Produto_Concorrente__c</referenceTo>
        <relationshipLabel>Checklist de Visitas ARG (Competitor Product 02)</relationshipLabel>
        <relationshipName>Checklist_de_Visitas_ARG1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompetitorProduct03_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Product 03</label>
        <referenceTo>Produto_Concorrente__c</referenceTo>
        <relationshipLabel>Checklist de Visitas ARG (Competitor Product 03)</relationshipLabel>
        <relationshipName>Checklist_de_Visitas_ARG2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompetitorsproductsinFolder_AR__c</fullName>
        <label>Competitors products in Folder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomerSalesmenComments_AR__c</fullName>
        <label>Customer Salesmen Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customermeetingcomments_AR__c</fullName>
        <label>Customer meeting comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customermeetingdate_AR__c</fullName>
        <label>Customer meeting date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customermeetingparticipants_AR__c</fullName>
        <label>Customer meeting participants</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customermeetingplace_AR__c</fullName>
        <label>Customer meeting place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customermeetingsuccess_AR__c</fullName>
        <inlineHelpText>Resultado alcanzado con relación al objetivo definido en la reunión anterior?</inlineHelpText>
        <label>Customer meeting success</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DatefromProduct01_AR__c</fullName>
        <label>Date from Product 01</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatefromProduct02_AR__c</fullName>
        <label>Date from Product 02</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatefromProduct03_AR__c</fullName>
        <label>Date from Product 03</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatetoProduct01_AR__c</fullName>
        <label>Date to Product 01</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatetoProduct02_AR__c</fullName>
        <label>Date to Product 02</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatetoProduct03_AR__c</fullName>
        <label>Date to Product 03</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drinkwelldone_AR__c</fullName>
        <label>Drink well done?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstbrandwasaPR_AR__c</fullName>
        <label>First brand was a PR?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FolderDatefrom_AR__c</fullName>
        <label>Folder Date from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FolderDateto_AR__c</fullName>
        <label>Folder Date to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FolderPricesinlinewithagreem_AR__c</fullName>
        <label>Folder Prices are in line with agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HadproductDrinkknowledge_AR__c</fullName>
        <label>Had product / drink knowledge?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HadproductDrinkpriceinfo_AR__c</fullName>
        <label>Had product / drink price info?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HighCustSatisf_AR__c</fullName>
        <label>High customer satisfaction?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_MX_ChecklistName__c</fullName>
        <label>Checklist Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_EndTime__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:15</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>08:45</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:15</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>09:45</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:15</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>10:45</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:15</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>11:45</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:15</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>12:45</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:15</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>13:45</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:15</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>14:45</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_MX_Feedback__c</fullName>
        <label>Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Reason__c</fullName>
        <inlineHelpText>Reason of the result of the Visit.</inlineHelpText>
        <label>Reason MX</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LAT_MX_Result__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Alligned with volume objective</fullName>
                </value>
                <value>
                    <fullName>Below volume objective</fullName>
                </value>
                <value>
                    <fullName>Overstock</fullName>
                </value>
                <value>
                    <fullName>Lack of space</fullName>
                </value>
                <value>
                    <fullName>Lack of budget</fullName>
                </value>
                <value>
                    <fullName>Without activity affinity</fullName>
                </value>
                <value>
                    <fullName>Business reduction</fullName>
                </value>
                <value>
                    <fullName>Brand trend</fullName>
                </value>
                <value>
                    <fullName>Policy changes</fullName>
                </value>
                <value>
                    <fullName>Stock process</fullName>
                </value>
                <value>
                    <fullName>Lack of affinity</fullName>
                </value>
                <value>
                    <fullName>Client policy</fullName>
                </value>
                <value>
                    <fullName>Lack of operative capacity</fullName>
                </value>
                <value>
                    <fullName>Exclusivity</fullName>
                </value>
                <value>
                    <fullName>Owner does not like</fullName>
                </value>
                <value>
                    <fullName>Impossibility of accomplishment</fullName>
                </value>
                <value>
                    <fullName>Not available</fullName>
                </value>
                <value>
                    <fullName>System down</fullName>
                </value>
                <value>
                    <fullName>Lack of follow up</fullName>
                </value>
                <value>
                    <fullName>Bill error</fullName>
                </value>
                <value>
                    <fullName>Deliver amount differences</fullName>
                </value>
                <value>
                    <fullName>Delivery date in wrong month</fullName>
                </value>
                <value>
                    <fullName>Credit note pending</fullName>
                </value>
                <value>
                    <fullName>Due payments</fullName>
                </value>
                <value>
                    <fullName>Insufficient information</fullName>
                </value>
                <value>
                    <fullName>Absent responsible</fullName>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_MX_Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>No order</fullName>
                </value>
                <value>
                    <fullName>Second round</fullName>
                </value>
                <value>
                    <fullName>Objective achieved</fullName>
                </value>
                <value>
                    <fullName>Objective failed</fullName>
                </value>
                <value>
                    <fullName>Information gathered</fullName>
                </value>
                <value>
                    <fullName>No information gathered</fullName>
                </value>
                <value>
                    <fullName>Activity on going</fullName>
                </value>
                <value>
                    <fullName>No activity</fullName>
                </value>
                <value>
                    <fullName>Chargeable confirmed</fullName>
                </value>
                <value>
                    <fullName>Chargeable not confirmed</fullName>
                </value>
                <value>
                    <fullName>Conciliation confimed</fullName>
                </value>
                <value>
                    <fullName>Conciliation not confimed</fullName>
                </value>
                <value>
                    <fullName>Accepts payment plan</fullName>
                </value>
                <value>
                    <fullName>Does not accept payment plan</fullName>
                </value>
                <value>
                    <fullName>Accepts early payment</fullName>
                </value>
                <value>
                    <fullName>Does not accept early payment</fullName>
                </value>
                <value>
                    <fullName>Cash payment confirmed</fullName>
                </value>
                <value>
                    <fullName>Cash payment not confirmed</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Not done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_MX_StartTime__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:15</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>08:45</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:15</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>09:45</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:15</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>10:45</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:15</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>11:45</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:15</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>12:45</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:15</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>13:45</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:15</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>14:45</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_MX_Subtype__c</fullName>
        <label>Subtype</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Running activity</fullName>
                </value>
                <value>
                    <fullName>Period closure</fullName>
                </value>
                <value>
                    <fullName>Season volume</fullName>
                </value>
                <value>
                    <fullName>Opening</fullName>
                </value>
                <value>
                    <fullName>Clasification</fullName>
                </value>
                <value>
                    <fullName>Supply</fullName>
                </value>
                <value>
                    <fullName>Trade Marketing activity</fullName>
                </value>
                <value>
                    <fullName>Brand activity</fullName>
                </value>
                <value>
                    <fullName>Discounts</fullName>
                </value>
                <value>
                    <fullName>Business revision</fullName>
                </value>
                <value>
                    <fullName>Confirm chargeable</fullName>
                </value>
                <value>
                    <fullName>Check differences</fullName>
                </value>
                <value>
                    <fullName>Negotiate early payment</fullName>
                </value>
                <value>
                    <fullName>Check payment plan</fullName>
                </value>
                <value>
                    <fullName>Client cash payments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>LAT_Opportunity__c</referenceTo>
        <relationshipLabel>LAT Checklist de Visitas ARG</relationshipLabel>
        <relationshipName>LAT_Checklist_de_Visitas_ARG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LandingProduct01_AR__c</fullName>
        <label>Landing Product 01</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LandingProduct02_AR__c</fullName>
        <label>Landing Product 02</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LandingProduct03_AR__c</fullName>
        <label>Landing Product 03</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LaunchingProduct01_AR__c</fullName>
        <label>Launching Product 01</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LaunchingProduct02_AR__c</fullName>
        <label>Launching Product 02</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LaunchingProduct03_AR__c</fullName>
        <label>Launching Product 03</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MechanicProduct01_AR__c</fullName>
        <label>Mechanic Product 01</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MechanicProduct02_AR__c</fullName>
        <label>Mechanic Product 02</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MechanicProduct03_AR__c</fullName>
        <label>Mechanic Product 03</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MerchCorrectAttitude_AR__c</fullName>
        <label>Merch. Correct Attitude?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MerchEvaluationComments_AR__c</fullName>
        <label>Merch. Evaluation Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MerchWorkedasexpected_AR__c</fullName>
        <label>Merch. Worked as expected?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NegExtraPointProduct01_AR__c</fullName>
        <label>Negotiation / Extra Point Product 01</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NegExtraPointProduct02_AR__c</fullName>
        <label>Negotiation / Extra Point Product 02</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NegExtraPointProduct03_AR__c</fullName>
        <label>Negotiation / Extra Point Product 03</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewPOPProduct01_AR__c</fullName>
        <label>New POP Product 01</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewPOPProduct02_AR__c</fullName>
        <label>New POP Product 02</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewPOPProduct03_AR__c</fullName>
        <label>New POP Product 03</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Checklist de Visitas ARG</relationshipLabel>
        <relationshipName>Checklist_de_Visitas_ARG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherActionsProduct01_AR__c</fullName>
        <label>Other Actions Product 01</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherActionsProduct02_AR__c</fullName>
        <label>Other Actions Product 02</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherActionsProduct03_AR__c</fullName>
        <label>Other Actions Product 03</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherReasonNotVisit_AR__c</fullName>
        <inlineHelpText>Informar otros motivos no citados en la lista.</inlineHelpText>
        <label>Other Reasons not visit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherReasonsNoCollection_AR__c</fullName>
        <inlineHelpText>Informar otros motivos no citados en la lista.</inlineHelpText>
        <label>Other Reasons no collection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherReasonsNotSale_AR__c</fullName>
        <inlineHelpText>Informar otros motivos no citados en la lista.</inlineHelpText>
        <label>Other Reasons not sale</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>POPvisible_AR__c</fullName>
        <inlineHelpText>Material de comunicación / POP está presente / visible?</inlineHelpText>
        <label>POP visible?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRproductsinFolder_AR__c</fullName>
        <label>PR products in Folder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QuantityofPRBrandsinFolder_AR__c</fullName>
        <label>Quantity of PR Brands in Folder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reaonofunsatisfaction_AR__c</fullName>
        <label>Reaon of unsatisfaction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReasonNotVisit_AR__c</fullName>
        <inlineHelpText>Justificar el motivo de no realizar la visita planificada</inlineHelpText>
        <label>Reason not visit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 - Closed business</fullName>
                </value>
                <value>
                    <fullName>02 - Business not available</fullName>
                </value>
                <value>
                    <fullName>03 - Other (pls detail)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receipt_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt</label>
        <referenceTo>RCP_Receipt_ARG__c</referenceTo>
        <relationshipLabel>Checklist de Visitas ARG</relationshipLabel>
        <relationshipName>Checklist_de_Visitas_ARG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResonNoCollection_AR__c</fullName>
        <label>Reson No Collection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 - Closed business</fullName>
                </value>
                <value>
                    <fullName>02 - Customer did not receive product</fullName>
                </value>
                <value>
                    <fullName>03 - Customer has other invoice due date</fullName>
                </value>
                <value>
                    <fullName>04 - Other (pls detail)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>